# stb-image-jni

./: .gitignore  README.md  pom.xml
jni/: CMakeLists.txt  build-natives-android.sh  build-natives-linux.sh  build-natives-windows.sh  build-natives.sh  multi-build.sh
jni/include/: StbImage.h
jni/lib/: stb_image.h
jni/src/: StbImage.cpp  StbImage.h
jni/toolchains/: linux-aarch64.cmake  linux-powerpc64.cmake  linux-riscv64.cmake  linux-x86_64.cmake  windows-aarch64.cmake  windows-arm64.cmake  windows-i686.cmake  windows-x86_64.cmake
natives/stb-image-jni-natives-android/: build.gradle.kts  local.properties  settings.gradle.kts
natives/stb-image-jni-natives-linux/: pom.xml
natives/stb-image-jni-natives-windows/: pom.xml
src/main/java/generaloss/stb/image/: StbImage.java  StbImageIOCallbacks.java  StbImageIOStream.java  StbImageIoCallbacks.java
src/test/java/: Test.java
